it was solved the issue with the z-index for the reduced menu

--- a/Style/style.css
+++ b/Style/style.css
@@ -206,7 +206,7 @@ footer figure img{
     width: 99%;
     text-align: center;
     margin-top: -100%;
-    z-index: 1;
+    z-index: 3;
     border-radius: 2px;
     opacity: 0.88;
   } 
